--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -29,7 +29,7 @@
         "size-limit": "size-limit",
         "analyze": "size-limit --why"
     },
-    "peerDependencies": {
+    "dependencies": {
         "@carrot-kpi/sdk": "workspace:*",
         "ethers": "^5.7.0",
         "i18next": "^22.0.2",
@@ -38,7 +38,6 @@
         "wagmi": "^0.8.5"
     },
     "devDependencies": {
-        "@carrot-kpi/sdk": "workspace:*",
         "@rollup/plugin-commonjs": "^23.0.2",
         "@rollup/plugin-json": "^5.0.1",
         "@rollup/plugin-node-resolve": "^15.0.1",
@@ -47,17 +46,12 @@
         "@types/react": "^18.0.23",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "eslint-config-custom": "workspace:*",
-        "ethers": "^5.7.0",
-        "i18next": "^22.0.6",
-        "react": "^18.2.0",
-        "react-i18next": "^12.0.0",
         "rimraf": "^3.0.2",
         "rollup": "^3.2.3",
         "rollup-plugin-peer-deps-external": "^2.2.4",
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
-        "tsconfig": "workspace:*",
-        "wagmi": "^0.8.5"
+        "tsconfig": "workspace:*"
     }
 }
