--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.12",
-    "class-variance-authority": "^0.3.0"
+    "class-variance-authority": "^0.3.0",
+    "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -65,7 +66,6 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
-    "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*"
   }
 }
