--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -32,6 +32,12 @@
         "analyze": "size-limit --why"
     },
     "dependencies": {
+        "@ethersproject/address": "^5.7.0",
+        "@ethersproject/bignumber": "^5.7.0",
+        "@ethersproject/contracts": "^5.7.0",
+        "@ethersproject/providers": "^5.7.2",
+        "@ethersproject/units": "^5.7.0",
+        "@ethersproject/wallet": "^5.7.0",
         "decimal.js-light": "^2.5.1",
         "ethers": "^5.7.0",
         "multiformats": "^9.9.0"
