--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -18,10 +18,10 @@ jobs:
         uses: pnpm/action-setup@v2
         with:
           version: latest
-      - name: Setup Node.js ${{matrix.node-version}}
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: ${{matrix.node-version}}
+          node-version: ${{ matrix.node-version }}
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -31,5 +31,20 @@ jobs:
         uses: web3-storage/add-to-web3@v2
         id: web3
         with:
-          web3_token: ${{secrets.WEB3_STORAGE_TOKEN}}
+          web3_token: ${{ secrets.WEB3_STORAGE_TOKEN }}
           path_to_add: "./packages/frontend/build"
+      - name: Find previous PR comment
+        uses: peter-evans/find-comment@v2
+        id: find
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          comment-author: "github-actions[bot]"
+          body-includes: Deploy preview
+      - name: Update or add PR comment
+        uses: peter-evans/create-or-update-comment@v2
+        with:
+          comment-id: ${{ steps.fc.outputs.comment-id }}
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Deploy preview available [here](https://${{ steps.web3.outputs.cid }}.ipfs.w3s.link)
+          edit-mode: replace
