--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Find previous PR comment
         uses: peter-evans/find-comment@v2
         id: find
+        continue-on-error: true
         with:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: "github-actions[bot]"
