--- a/.github/workflows/frontend-deploy-preview.yml
+++ b/.github/workflows/frontend-deploy-preview.yml
@@ -41,7 +41,8 @@ jobs:
           issue-number: ${{ github.event.pull_request.number }}
           comment-author: "github-actions[bot]"
           body-includes: Deploy preview
-      - name: Update or add PR comment
+      - name: Update PR comment
+        if: ${{ steps.find.outputs.comment-id != '' }}
         uses: peter-evans/create-or-update-comment@v2
         with:
           comment-id: ${{ steps.find.outputs.comment-id }}
@@ -49,3 +50,10 @@ jobs:
           body: |
             Deploy preview available [here](https://${{ steps.web3.outputs.cid }}.ipfs.w3s.link)
           edit-mode: replace
+      - name: Add PR comment
+        if: ${{ steps.find.outputs.comment-id == '' }}
+        uses: peter-evans/create-or-update-comment@v2
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body: |
+            Deploy preview available [here](https://${{ steps.web3.outputs.cid }}.ipfs.w3s.link)
