--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -33,9 +33,11 @@
         "@carrot-kpi/sdk": "workspace:*",
         "ethers": "^5.7.0",
         "i18next": "^22.0.2",
-        "react": "^18.2.0",
         "react-i18next": "^12.0.0",
         "wagmi": "^0.8.5"
+    },
+    "peerDependencies": {
+        "react": "^18.2.0"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.2",
