--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,9 +31,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "@fontsource/ibm-plex-mono": "^4.5.12",
     "class-variance-authority": "^0.3.0",
     "tailwindcss": "^3.2.4"
+  },
+  "peerDependencies": {
+    "@fontsource/ibm-plex-mono": "^4.5.12",
+    "react": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
