--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -5,12 +5,11 @@
     "version": "0.16.0",
     "license": "GPL-3.0-or-later",
     "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
+    "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.js"
+            "import": "./dist/index.js"
         }
     },
     "files": [
@@ -31,13 +30,13 @@
     },
     "dependencies": {
         "@carrot-kpi/sdk": "workspace:*",
-        "ethers": "^5.7.0",
-        "i18next": "^22.0.2",
-        "react-i18next": "^12.0.0",
-        "wagmi": "^0.8.5"
+        "ethers": "^5.7.0"
     },
     "peerDependencies": {
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "wagmi": "^0.8.5",
+        "i18next": "^22.0.2",
+        "react-i18next": "^12.0.0"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.2",
@@ -54,6 +53,7 @@
         "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-typescript2": "^0.34.0",
         "size-limit": "^8.1.0",
-        "tsconfig": "workspace:*"
+        "tsconfig": "workspace:*",
+        "wagmi": "^0.8.5"
     }
 }
