--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -6,12 +6,11 @@
     "version": "1.9.2",
     "description": "An SDK for building applications on top of Carrot v1.",
     "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
+    "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "exports": {
         ".": {
-            "import": "./dist/index.mjs",
-            "require": "./dist/index.js"
+            "import": "./dist/index.js"
         }
     },
     "files": [
