--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -4,12 +4,11 @@
   "version": "0.1.0",
   "license": "GPL-3.0-or-later",
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
+      "import": "./dist/index.js"
     }
   },
   "files": [
