--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,8 +30,6 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
-    "class-variance-authority": "^0.3.0",
-    "tailwindcss": "^3.2.4"
   },
   "peerDependencies": {
     "@fontsource/ibm-plex-mono": "^4.5.12",
@@ -56,6 +54,7 @@
     "@types/rollup-plugin-peer-deps-external": "^2.2.1",
     "autoprefixer": "^10.4.13",
     "babel-loader": "^8.2.5",
+    "class-variance-authority": "^0.3.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.19",
     "postcss-loader": "^7.0.2",
@@ -68,6 +67,7 @@
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.34.0",
     "size-limit": "^8.1.0",
+    "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*"
   }
 }
