--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -30,13 +30,13 @@
     },
     "dependencies": {
         "@carrot-kpi/sdk": "workspace:*",
-        "ethers": "^5.7.0"
+        "@ethersproject/bignumber": "^5.7.0"
     },
     "peerDependencies": {
-        "react": "^18.2.0",
-        "wagmi": "^0.8.5",
         "i18next": "^22.0.2",
-        "react-i18next": "^12.0.0"
+        "react": "^18.2.0",
+        "react-i18next": "^12.0.0",
+        "wagmi": "^0.8.5"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.2",
@@ -47,6 +47,9 @@
         "@types/react": "^18.0.23",
         "@types/rollup-plugin-peer-deps-external": "^2.2.1",
         "eslint-config-custom": "workspace:*",
+        "i18next": "^22.0.6",
+        "react": "^18.2.0",
+        "react-i18next": "^12.0.0",
         "rimraf": "^3.0.2",
         "rollup": "^3.2.3",
         "rollup-plugin-peer-deps-external": "^2.2.4",
